@@ -10,7 +10,7 @@ binmode(STDOUT, ':utf8');
 binmode(STDERR, ':utf8');
 # We must declare in advance how many tests we are going to perform.
 # There are currently three tests per tagset driver.
-use Test::More tests => 13*3;
+use Test::More tests => 14*3;
 use Lingua::Interset qw(get_driver_object);
 use Lingua::Interset::Tagset;
 
@@ -23,7 +23,8 @@ my @tagsets =
     'cs::pdt', 'cs::ajka', 'cs::multext', 'cs::pmkkr',
     'en::penn', 'en::conll', 'en::conll2009',
     'hr::multext',
-    'ja::ipadic'
+    'ja::ipadic',
+    'mul::google'
 );
 foreach my $tagset (@tagsets)
 {
